test/earlyReturn4.slq

def foo(const x:ğ”¹){
	y:=H(1:ğ”¹); // error // TODO?
	if x{
		return y;
	}
	return X(y); // error
}

def main(){
	x:=H(0:ğ”¹);
	forget(H(foo(x))=1);
	return x; // (0.707107+0i)Â·|1âŸ©+(-0.707107-0i)Â·|0âŸ©
}
